add UI logic to page
co-authored-by: Andrew Giang <giang184@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>TITLE-HTML</title>
 </head>
 <body>
+  <form id="sudoku">
   <div class="container">
     <div class="input">5</div>
     <div class="input">3</div>
@@ -94,6 +95,8 @@
     <div class="input"><input type="text" id="97"></div>
     <div class="input">7</div>
     <div class="input">9</div>
-</div>
+  </div>
+  <button type="submit" class="btn-lg btn-success">Check!</button>
+</form>
 </body>
 </html>
